// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

import "types.proto";
import "transaction.proto";
import "transaction_metadata.proto";

package tari.transaction_protocol;

// This is the message containing the public data that the Receiver will send back to the Sender
message RecipientSignedMessage {
    uint64 tx_id = 1;
    tari.types.TransactionOutput output = 2;
    bytes public_spend_key = 3;
    tari.types.Signature partial_signature = 4;
    // The transaction metadata
    TransactionMetadata metadata = 5;
    //offset from recipient
    bytes offset = 6;
}
